# distributed-message-routing-platform

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  start_demo.cmd  stop_demo.cmd
bridge/: __init__.py  app.py  requirements.txt
bridge/tests/: test_bridge.py
clients/demo-client/src/: main.cpp
common/include/dist_platform/: base64.hpp  config.hpp  file_utils.hpp  frame_codec.hpp  logging.hpp  metadata_repository.hpp  mysql_store.hpp  random_id.hpp  redis_client.hpp  router_logic.hpp  rpc_client.hpp  tcp_frame_server.hpp  thread_pool.hpp  time_utils.hpp
common/src/: base64.cpp  config.cpp  file_utils.cpp  frame_codec.cpp  logging.cpp  metadata_repository.cpp  mysql_store.cpp  random_id.cpp  redis_client.cpp  router_logic.cpp  rpc_client.cpp  tcp_frame_server.cpp  thread_pool.cpp  time_utils.cpp
config/: file.json  gateway.json  metadata.json  router.json  session.json
docs/: architecture.md
infra/compose/: docker-compose.yml
infra/mysql/: init.sql
infra/redis/: redis.conf
libs/common/include/platform/common/: models.hpp
libs/common/src/: models.cpp
libs/net/include/platform/net/: reactor_stub.hpp
libs/net/src/: reactor_stub.cpp
libs/observability/include/platform/observability/: metrics_registry.hpp
libs/observability/src/: metrics_registry.cpp
libs/protocol/include/platform/protocol/: frame_codec.hpp
libs/protocol/src/: frame_codec.cpp
libs/routing/include/platform/routing/: consistent_hash_router.hpp
libs/routing/src/: consistent_hash_router.cpp
libs/storage/include/platform/storage/: in_memory_store.hpp
libs/storage/src/: in_memory_store.cpp
proto/: dist_platform.proto  platform.proto
scripts/: build.sh  configure_mingw.ps1  demo_scenario_message_and_file.ps1  init_db.sh  one_click_demo.sh  run_demo.sh  start_demo.ps1  start_stack.sh  start_web_demo.sh  stop_demo.ps1  stop_stack.sh  stop_web_demo.sh
services/admin-api/include/admin_api/: admin_api.hpp
services/admin-api/src/: admin_api.cpp  main.cpp
services/file/: main.cpp
services/file-service/include/file_service/: file_service.hpp
services/file-service/src/: file_service.cpp  main.cpp
services/gateway/: main.cpp
services/gateway/include/gateway/: gateway_service.hpp
services/gateway/src/: gateway_service.cpp  main.cpp
services/message-service/include/message_service/: message_service.hpp
services/message-service/src/: main.cpp  message_service.cpp
services/metadata/: main.cpp
services/router/: main.cpp
services/scheduler/include/scheduler/: scheduler_service.hpp
services/scheduler/src/: main.cpp  scheduler_service.cpp
services/session/: main.cpp
tests/integration/: test_message_file.cpp  test_storage.cpp
tests/unit/: test_frame_codec.cpp  test_protocol.cpp  test_router_logic.cpp  test_routing.cpp
tools/demo_driver/: demo_driver.py
tools/json_debug_client/: json_debug_client.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/admin-dashboard/: index.html  package-lock.json  package.json
web/admin-dashboard/src/: App.tsx  main.tsx
web/admin-dashboard/src/styles/: dashboard.css  index.css
web/src/: App.jsx  styles.css
web/src/components/: FileConsole.jsx  MessageConsole.jsx  OpsTimeline.jsx  StatusStrip.jsx
web/src/lib/: api.js
web/src/test/: App.test.jsx
